convert structure and add remote

--- a/data/project.json
+++ b/data/project.json
@@ -9,7 +9,8 @@
   ],
   "defaultDataset": "Sample_3",
   "imageDataFormats": [
-    "bdv.n5"
+    "bdv.n5",
+    "bdv.n5.s3"
   ],
   "specVersion": "0.2.0"
 }
