--- a/data/project.json
+++ b/data/project.json
@@ -8,5 +8,9 @@
     "Sample8_control"
   ],
   "defaultDataset": "Sample_3",
+   "description": "Ayuso-Jimeno et al. (2022) PAG-dAPEX2 FIB-SEM, bioRxiv",
+  "references": [
+    "https://www.biorxiv.org/content/10.1101/2021.12.13.472405v1"
+  ],
   "specVersion": "0.3.0"
 }
